--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Calculadora de Horas Trabalhadas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Calculadora de Horas Trabalhadas</h1>
-
   <div class="card">
+    <h1>Calculadora de Horas Trabalhadas</h1>
     <h2>Calcule suas Horas Trabalhadas</h2>
 
     <div class="campo">
@@ -32,11 +32,11 @@
     </div>
 
     <button onclick="calcularHoras()">CALCULAR</button>
-  </div>
 
-  <div class="resultado">
-    <h3>Resultado</h3>
-    <p>Horas Trabalhadas: <span id="total">00:00</span></p>
+    <div class="resultado">
+      <h3>Resultado</h3>
+      <p>Horas Trabalhadas: <span id="total">00:00</span></p>
+    </div>
   </div>
 
   <script src="script.js"></script>
